# NautilusBinding

./: README.md
libnautilus-extension/: Cargo.toml  Gir.toml
libnautilus-extension/libnautilus-extension-sys/: Cargo.toml  Gir.toml  build.rs
libnautilus-extension/libnautilus-extension-sys/src/: lib.rs
libnautilus-extension/libnautilus-extension-sys/tests/: abi.rs  constant.c  layout.c  manual.h
libnautilus-extension/src/: lib.rs
libnautilus-extension/src/auto/: functions.rs  mod.rs  versions.txt
