[package]
name = "nautilus-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.libnautilus_extension]
name = "libnautilus-extension-4"
version = "4"

[package.metadata.system-deps.libnautilus_extension.v4_1]
name = "libnautilus-extension-4"
version = "4.1"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
all-features = true

[lib]
name = "nautilus_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v4_1 = ["ffi/v4_1"]
